ubuntu font return

--- a/client/client.jade
+++ b/client/client.jade
@@ -5,10 +5,12 @@ head
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
     meta(name="msapplication-TileColor" content="#da532c")
     meta(name="theme-color" content="black")
-    link(href="https://fonts.googleapis.com/css?family=Ubuntu:300,400&display=swap" rel="stylesheet")
-    // link(href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:300&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Lato+Mono:300&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet")
     link(href="https://fonts.googleapis.com/css?family=Raleway:300,400&display=swap" rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css?family=Montserrat:300,400&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Montserrat:300&display=swap" rel="stylesheet")
     //- script(src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js")
 
     link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
