--- a/client/s.css
+++ b/client/s.css
@@ -1,5 +1,6 @@
 body {
     /* font-family: 'Raleway', sans-serif !important; */
+     font-family: 'Ubuntu', sans-serif !important; 
     /* font-family: 'Lato+Mono', sans-serif !important; */
     /* font-family: 'Lato', sans-serif !important; */
      /*font-size: 100% !important; */
@@ -645,11 +646,11 @@ input {
 .ui.header{
   transition: all .25s ease !important;
   /* text-transform: capitalize !important; */
-  font-family: 'Raleway', sans-serif !important; 
+  /*font-family: 'Raleway', sans-serif !important; */
   /*font-family: 'Montserrat', sans-serif !important; */
   /*font-family: 'Roboto', sans-serif !important; */
   /*font-family: 'Lato+Mono', sans-serif !important; */
-  /*font-family: 'Ubuntu', sans-serif !important;*/
+  font-family: 'Ubuntu', sans-serif !important;
 }
 
 @keyframes fadein {
