--- a/client/s.css
+++ b/client/s.css
@@ -650,7 +650,7 @@ input {
   /*font-family: 'Montserrat', sans-serif !important; */
   /*font-family: 'Roboto', sans-serif !important; */
   /*font-family: 'Lato+Mono', sans-serif !important; */
-  font-family: 'Ubuntu', sans-serif !important;
+  /*font-family: 'Ubuntu', sans-serif !important;*/
 }
 
 @keyframes fadein {
