up users to 100 and change to people

--- a/client/people.jade
+++ b/client/people.jade
@@ -3,7 +3,7 @@ template(name='users')
         .sixteen.wide.column.scrolling
             .ui.inline.header
                 i.users.icon
-                |stack users
+                |people
             // #cloud.ui.center.aligned.fluid.segment
                 // if currentUser
                 //     .ui.icon.input
