--- a/client/people.jade
+++ b/client/people.jade
@@ -1,9 +1,7 @@
 template(name='users')
     .ui.stackable.padded.grid
         .sixteen.wide.column.scrolling
-            .ui.inline.header
-                i.users.icon
-                |people
+            // i.big.user.outline.icon
             // #cloud.ui.center.aligned.fluid.segment
                 // if currentUser
                 //     .ui.icon.input
